src/objects/c2g__CancelPaymentLog__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcancelpaymentlog</customHelpPage>
    <description>This is an error that occurs when a cancel payment process is performed. This error is linked to a Payment Account Line Item (Payment Summary Line)</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CancelPayment__c</fullName>
        <label>Cancel Payment Control</label>
        <referenceTo>c2g__CancelPayment__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cancel Payment Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cancel Payment Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancel Payment Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>